put Rate and RepaymentDay strategies